# CASADI_mixed_integer_example

./: CMakeLists.txt  README.md  run_docker.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: example1.cpp  example2.cpp
